[package]
name = "philips_hue_lab"
version = "0.1.0"
edition = "2021"
description = "Experimental CLI tools for Philips Hue ZigBee IoT devices."

[dependencies]
clap = { version = "4.1", features = ["derive"] }
reqwest = { version = "0.12.12" , features = ["blocking", "json"]}
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
